src : creation class MainGUI and managing script