@@ -14,7 +14,4 @@ javac -d "$bin_dir" -cp "$lib_dir/*" "$current_dir"/src/temp/*.java
 rm -R "$current_dir"/src/temp
 
 echo "Compilation finished".
-echo "Running test "
-cd bin
-java test.Main
-cd ..
+java --module-path lib/ --add-modules javafx.controls -cp "bin:lib/*" main.MainGUI
